test/loop/confidence/errors/module_errors_3.loop
# Errors in pattern matching functions

require

